# mandelcloud

./: .dockerignore  .gitignore  Cargo.toml  lambda-build.sh  lambda-image.dockerfile
crates/mandelcloud-compute/: Cargo.toml
crates/mandelcloud-compute/src/: compute_point.rs  http.rs  main.rs  types.rs
crates/mandelcloud-ui/: Cargo.toml  index.html  index.js  package-lock.json  webpack.config.js
crates/mandelcloud-ui/src/: lib.rs
terraform/envs/dev/: .terraform.lock.hcl  kanga.config  main.tf
terraform/modules/mandelcloud/: ecr.tf  lambda.tf  main.tf  storage.tf
