[package]
name = "mandelcloud-compute"
description = "Compute node binary for MandelCloud"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.59"
aws-smithy-types = "1.2.6"
aws-smithy-runtime-api = "1.7.2"
aws_lambda_events = "0.15.1"
futures = "0.3.30"
http = "1.1"
lambda_runtime = "0.13.0"
log = "0.4.14"
regex = "1.10.6"
rug = { version = "1.26.1", default-features = false, features = ["complex", "serde", "std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "test-util"] }
