[package]
name = "mandelcloud-ui"
description = "WASM user interface for MandelCloud"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "ImageData",
    "Node",
    "NodeList",
    "Window",
]}
web-time = "1.1.0"
